[project]
name = "scripted-render-pipeline"
version = "0.0.1"
authors = [
  { name="thopp-tudelft", email="t.r.hoppener@tudelft.nl" },
]
license = {text = "GPLv3+"}
keywords = [
  "image processing",
  "volume reconstruction",
  "image stitching",
  "electron microscopy",
  "microscopy",
  "render-python",
  "requests",
]
description = "automated pipeline interfacing with render-ws rest api"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "imagecodecs",
  "numpy",
  "pyyaml",
  "render-python",
  "requests",
  "scikit-image",
  "tifffile",
  "tqdm",
  "webknossos>=0.14.0",
]

[project.optional-dependencies]
format = [
  "black",
  "isort",
  "flake8",
]

[project.urls]
"Homepage" = "https://github.com/hoogenboom-group/scripted-render-pipeline"
"Bug Tracker" = "https://github.com/hoogenboom-group/scripted-render-pipeline/issues"

[project.scripts]
post_correct = "scripted_render_pipeline.postcorrector:__main__._main"
render_import = "scripted_render_pipeline.importer:__main__._main"
render_export = "scripted_render_pipeline.exporter:__main__._main"
render_basic_auth = "scripted_render_pipeline:basic_auth._main"
